Use Intel's oneMKL if available
On Debian and Ubuntu, a version of the Intel® Math Kernel Library (MKL)
from 2020 can be found in the standard repositories (resp. non-free and
multiverse). The user may instead get MKL directly from Intel,[1] either
because they want the latest version, or because it cannot be found in
the standard repos (e.g. on Rocky Linux). Let CMakeLists.txt use this
upstream version if available.

The current version of MKL is now called “oneAPI Math Kernel Library”
(oneMKL). Unlike the versions shipped by Debian and Ubuntu, which work
flawlessly with pkg-config, this upstream version:

* installs everything in /opt/intel, which requires setting a few
  environment variables before building, and setting at least
  LD_LIBRARY_PATH before running feellgood

* provides a script[2], which should be sourced by the shell in order to
  set these variables

* provides broken pkg-config .pc files listing non-existent include
  directories, which trigger a cmake failure

* provides a valid MKLConfig.cmake file, for use with find_package()

With this commit, CMakeLists.txt tries to load MKL using find_package().
If that fails, it tries find_package(PkgConfig). If that succeeds, it
tries to load MKL using the PkgConfig package. The expected result is:

* If oneMKL is installed and the environment has been properly set up,
  find_package() should succeed.

* If oneMKL is installed but the environment has not been set up, cmake
  will fail on the broken .pc files.

* If oneMKL is not installed and the distro-provided MKL is installed,
  find_package() should fail and PkgConfig should succeed.

* If no MKL is installed, feeLLGood will simply not use it.

Note that a failure of find_package(PkgConfig) is no longer fatal.

Tested on Ubuntu 22.04 and Rocky Linux 9.

[1] https://www.intel.com/content/www/us/en/developer/tools/oneapi/onemkl-download.html
[2] /opt/intel/oneapi/setvars.sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,17 +14,32 @@ else()
     message(FATAL_ERROR "TBB NOT FOUND")
 endif()
 
-find_package(PkgConfig REQUIRED)
-
-pkg_check_modules(MKL QUIET IMPORTED_TARGET mkl-dynamic-lp64-iomp)
+# Use the Intel MKL library if we can find it.
+# First, try find_package(), which should work on a oneAPI environment.
+set(MKL_INTERFACE lp64)
+set(MKL_THREADING intel_thread)
+find_package(MKL QUIET)
 if(MKL_FOUND)
-    message(STATUS "MKL Found")
-    #message(STATUS "MKL compile options = ${MKL_CFLAGS}")
-    #message(STATUS "MKL LD flags = ${MKL_LDFLAGS}")
-    set(EIGEN_MKL_CFLAGS "-DEIGEN_USE_MKL_ALL -DMKL_DIRECT_CALL")  # -DMKL_DIRECT_CALL : not sure we need it, neither it does something
-    set(MKL_INTERFACE lp64) # from eigen3 documentation, we need that to get eigen work with intel mkl
+    message(STATUS "Found MKL with find_package()")
+    set(MKL_TARGET "MKL::MKL")
 else()
-    message(STATUS "MKL not found")
+    # As find_package() failed to find MKL, try pkg-config.
+    find_package(PkgConfig)
+    if(PKG_CONFIG_FOUND)
+        pkg_check_modules(MKL QUIET IMPORTED_TARGET mkl-dynamic-lp64-iomp)
+        if(MKL_FOUND)
+            message(STATUS "Found MKL with pkg-config")
+            set(MKL_TARGET "PkgConfig::MKL")
+        endif()
+    else()
+        message(STATUS "Not found: PkgConfig, needed for MKL")
+    endif()
+endif()
+
+if(MKL_FOUND)
+    set(EIGEN_MKL_CFLAGS "-DEIGEN_USE_MKL_ALL -DMKL_DIRECT_CALL")  # -DMKL_DIRECT_CALL : not sure we need it, neither it does something
+else()
+    message(STATUS "Not found: MKL")
 endif()
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
@@ -89,7 +104,7 @@ ADD_EXECUTABLE(feellgood main.cpp ${HEADERS} ${SOURCES} default-settings.o)
 if (MKL_FOUND)
     TARGET_LINK_OPTIONS(feellgood PRIVATE "-Wl,--no-as-needed")
     # not sure we really need it since --no-as-needed is default value, though there might be a --as-needed before
-    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX TBB::tbb Eigen3::Eigen PkgConfig::MKL)
+    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX TBB::tbb Eigen3::Eigen ${MKL_TARGET})
 else()
     TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX TBB::tbb Eigen3::Eigen)
 endif()
