--- a/config.h.in
+++ b/config.h.in
@@ -36,6 +36,15 @@ const double CHARGE_ELECTRON = 1.602176634e-19;     /**< C */
 const double MASS_ELECTRON = 9.1093837015e-31;      /**< kg */
 const double BOHRS_MUB = CHARGE_ELECTRON * PLANCKS_HBAR / (2. * MASS_ELECTRON); /**< C.m^2 */
 
+/** set execution policy */
+#cmakedefine01 ENABLE_SEQ
+
+#if ENABLE_SEQ
+    #define EXEC_POL std::execution::seq
+#else
+    #define EXEC_POL std::execution::par
+#endif
+
 /** do an extra orthonormalization of the (u0, ep, eq) basis in order to minimize the rounding
  * errors */
 #define PARANOID_ORTHONORMALIZATION false
