cmake modification, if tbb not found sequential mode is ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,14 @@ option(ENABLE_SEQ "Enable sequential execution policy" OFF)
 message( STATUS "Enable sequential execution policy: ENABLE_SEQ = " ${ENABLE_SEQ} )
 
 if(NOT ${ENABLE_SEQ})
-    find_package(TBB REQUIRED)
+    find_package(TBB QUIET)
     if(TBB_FOUND)
-        message(STATUS "Found TBB")
+        message(STATUS "Found TBB, parallel mode is active")
         set(TBB_LINK TBB::tbb)
     else()
-        message(FATAL_ERROR "TBB NOT FOUND")
+        message(STATUS "TBB NOT FOUND")
+        message(WARNING "sequential mode is active")
+        set(ENABLE_SEQ TRUE)
     endif()
 endif()
 
