--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable (test_ut_solver ut_solver.cpp)
 
 add_executable (test_ut_OMP_solver ut_OMP_solver.cpp)
 
+add_executable(test_ut_dukTapeParser ../expression_parser.cpp ut_dukTapeParser.cpp)
+
 add_executable (test_ut_node ut_node.cpp)
 
 SET(SOURCES ../facette.cpp ../tetra.cpp ut_element.cpp)
@@ -126,6 +128,14 @@ target_link_libraries(test_ut_OMP_solver
   OpenMP::OpenMP_CXX
   )
 
+target_link_libraries(test_ut_dukTapeParser
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  duktape
+  Eigen3::Eigen
+  )
+
 #target_compile_options(test_ut_node PUBLIC -fsanitize=leak )
 #target_link_options(test_ut_node PUBLIC -fsanitize=leak ) # -> random SEGFAULT
 target_link_libraries(test_ut_node
@@ -169,6 +179,7 @@ target_link_libraries(test_ut_log-stats
 # setarch --addr-no-randomize ./test_ut_* to disable ASLR to avoid -fsanitize=leak to bug
 add_test (NAME ut_solver COMMAND test_ut_solver)
 add_test (NAME ut_OMP_solver COMMAND test_ut_OMP_solver)
+add_test (NAME ut_dukTapeParser COMMAND test_ut_dukTapeParser)
 add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_element COMMAND test_ut_element)
 add_test (NAME ut_facette COMMAND test_ut_facette)
