--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -30,6 +30,9 @@ add_executable (test_ut_facette ${SOURCES})
 SET(SOURCES ../tetra.cpp ut_tetra.cpp)
 add_executable (test_ut_tetra ${SOURCES})
 
+SET(SOURCES ../tetra.cpp ut_tet_lumping.cpp)
+add_executable (test_ut_tet_lumping ${SOURCES})
+
 SET(SOURCES ../tetra.cpp ut_energy.cpp ../facette.cpp)
 add_executable (test_ut_energy ${SOURCES})
 
@@ -66,6 +69,14 @@ if (MKL_FOUND)
     #target_compile_options(test_ut_tetra PUBLIC -fsanitize=leak )
     #target_link_options(test_ut_tetra PUBLIC -fsanitize=leak )
     target_link_libraries(test_ut_tetra
+        ${Boost_FILESYSTEM_LIBRARY}
+        ${Boost_SYSTEM_LIBRARY}
+        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+        TBB::tbb
+        PkgConfig::MKL
+        )
+
+    target_link_libraries(test_ut_tet_lumping
         ${Boost_FILESYSTEM_LIBRARY}
         ${Boost_SYSTEM_LIBRARY}
         ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
@@ -184,6 +195,7 @@ add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_element COMMAND test_ut_element)
 add_test (NAME ut_facette COMMAND test_ut_facette)
 add_test (NAME ut_tetra COMMAND test_ut_tetra)
+add_test (NAME ut_tet_lumping COMMAND test_ut_tet_lumping)
 add_test (NAME ut_energy COMMAND test_ut_energy)
 add_test (NAME ut_anisotropy COMMAND test_ut_anisotropy)
 add_test (NAME ut_tiny COMMAND test_ut_tiny)
