added a unit test on Tet::charges()

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -33,6 +33,9 @@ add_executable (test_ut_tetra ${SOURCES})
 SET(SOURCES ../tetra.cpp ut_tet_lumping.cpp)
 add_executable (test_ut_tet_lumping ${SOURCES})
 
+SET(SOURCES ../tetra.cpp ut_tet_charges.cpp)
+add_executable (test_ut_tet_charges ${SOURCES})
+
 SET(SOURCES ../tetra.cpp ut_energy.cpp ../facette.cpp)
 add_executable (test_ut_energy ${SOURCES})
 
@@ -78,6 +81,14 @@ if (MKL_FOUND)
         )
 
     target_link_libraries(test_ut_tet_lumping
+        ${Boost_FILESYSTEM_LIBRARY}
+        ${Boost_SYSTEM_LIBRARY}
+        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+        TBB::tbb
+        PkgConfig::MKL
+        )
+
+    target_link_libraries(test_ut_tet_charges
         ${Boost_FILESYSTEM_LIBRARY}
         ${Boost_SYSTEM_LIBRARY}
         ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
@@ -197,6 +208,7 @@ add_test (NAME ut_element COMMAND test_ut_element)
 add_test (NAME ut_facette COMMAND test_ut_facette)
 add_test (NAME ut_tetra COMMAND test_ut_tetra)
 add_test (NAME ut_tet_lumping COMMAND test_ut_tet_lumping)
+add_test (NAME ut_tet_charges COMMAND test_ut_tet_charges)
 add_test (NAME ut_energy COMMAND test_ut_energy)
 add_test (NAME ut_anisotropy COMMAND test_ut_anisotropy)
 add_test (NAME ut_tiny COMMAND test_ut_tiny)
