added a checkMesh using gmsh API that checks if all named regions from yaml settings are in the mesh file, with appropriate meshing:3D,tetrahedrons and triangles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,18 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS OFF) # ON to get a .json with compiler calls f
 
 find_package(OpenMP REQUIRED)
 
+find_library(GMSH_LIB gmsh)
+if(GMSH_LIB)
+    message(STATUS "Found GMSH")
+else()
+    message(FATAL_ERROR "Could not find libgmsh")
+endif()
+
+find_path(GMSH_INC gmsh.h)
+if(NOT GMSH_INC)
+  message(FATAL_ERROR "Could not find gmsh.h")
+endif()
+
 #===========================================================================
 # cmake . -DENABLE_SEQ=OFF
 # execution policy, by default it is parallel, sequential is for debug purpose.
@@ -111,6 +123,8 @@ add_custom_command(
 # -fsanitize=address leak null undefined # both compiler and linker
 #===========================================================================
 
+include_directories (${CMAKE_SOURCE_DIR} ${GMSH_INC})
+
 ADD_EXECUTABLE(feellgood main.cpp ${HEADERS} ${SOURCES} default-settings.o)
 target_compile_options( feellgood PUBLIC -Wall -Wextra -O3 -march=native ${MKL_CFLAGS} )
 target_compile_definitions(feellgood PUBLIC -DNDEBUG -DTBB_SUPPRESS_DEPRECATED_MESSAGES ${EIGEN_MKL_CFLAGS} )
@@ -119,9 +133,9 @@ if (MKL_FOUND)
     #option --no-as-needed for mkl, see https://www.intel.com/content/www/us/en/developer/tools/oneapi/onemkl-link-line-advisor.html
     target_link_options(feellgood PUBLIC "-Wl,--no-as-needed" )
     # not sure we really need it since --no-as-needed is default value, though there might be a --as-needed before
-    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX ${TBB_LINK} Eigen3::Eigen ${MKL_TARGET})
+    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX ${TBB_LINK} Eigen3::Eigen ${MKL_TARGET} ${GMSH_LIB})
 else()
-    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX ${TBB_LINK} Eigen3::Eigen)
+    TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN OpenMP::OpenMP_CXX ${TBB_LINK} Eigen3::Eigen ${GMSH_LIB})
 endif()
 
 #===========================================================================
