CI: remove Vagrant machine ubuntu_focal
Now that 24.04 is out, remove the old Ubuntu 20.04 LTS "Focal Fossa"
Vagrant machine: we only support the last two Ubuntu LTS releases (22.04
and 24.04).

Also, update the comment on Ubuntu 24.04 LTS "Noble Numbat", which is
not a "future" release anymore.

Note that Canonical has stopped releasing official Vagrant boxes.[1] The
box ubuntu/noble64, which I downloaded as a "development branch" prior
to this decision, is still functional, but not available for download
anymore. The box bento/ubuntu-24.04 seems like a good alternative.

[1] https://documentation.ubuntu.com/public-images/en/latest/public-images-explanation/vagrant/

--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure("2") do |config|
   ######################################################################
   # Distro-specific configuration.
 
-  # Ubuntu development branch, future 24.04 LTS "Noble Numbat"
+  # Ubuntu 24.04 LTS "Noble Numbat"
   config.vm.define "ubuntu_noble", autostart: false do |machine|
     machine.vm.box = "ubuntu/noble64"
   end
@@ -29,11 +29,6 @@ Vagrant.configure("2") do |config|
   # Ubuntu 22.04 LTS "Jammy Jellyfish"
   config.vm.define "ubuntu_jammy", autostart: false do |machine|
     machine.vm.box = "ubuntu/jammy64"
-  end
-
-  # Ubuntu 20.04 LTS "Focal Fossa"
-  config.vm.define "ubuntu_focal", autostart: false do |machine|
-    machine.vm.box = "ubuntu/focal64"
   end
 
   # Debian Testing, future Debian 13 "Trixie"
