added a unit test on some elementary algebra functions

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable (test_ut_solver ut_solver.cpp)
 
 add_executable (test_ut_algebra_bicg ut_algebra_bicg.cpp)
 
+add_executable (test_ut_algebra ut_algebra.cpp)
+
 add_executable (test_ut_OMP_solver ut_OMP_solver.cpp)
 
 add_executable(test_ut_dukTapeParser ../expression_parser.cpp ut_dukTapeParser.cpp)
@@ -142,6 +144,13 @@ target_link_libraries(test_ut_algebra_bicg
   TBB::tbb
   )
 
+target_link_libraries(test_ut_algebra
+        ${Boost_FILESYSTEM_LIBRARY}
+        ${Boost_SYSTEM_LIBRARY}
+        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+        TBB::tbb
+        )
+
 #target_compile_options(test_ut_OMP_solver PUBLIC -fsanitize=leak )
 #target_link_options(test_ut_OMP_solver PUBLIC -fsanitize=leak )
 target_link_libraries(test_ut_OMP_solver
@@ -210,6 +219,7 @@ target_link_libraries(test_ut_readMesh
 add_test (NAME ut_solver COMMAND test_ut_solver)
 add_test (NAME ut_algebra_bicg COMMAND test_ut_algebra_bicg)
 add_test (NAME ut_OMP_solver COMMAND test_ut_OMP_solver)
+add_test (NAME ut_algebra COMMAND test_ut_algebra)
 add_test (NAME ut_dukTapeParser COMMAND test_ut_dukTapeParser)
 add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_element COMMAND test_ut_element)
