added spin accumulation boundary condition Qs on surfaces, modified assign for 3D eigen vectors inputs from settings to normalize(or not)

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -163,6 +163,9 @@ mesh:
       # electrostatic problem.
       V:
 
+      # Boundary condition for spin accumulation diffusion problem.
+      Qs: [0, 0, 0]
+
 # The initial magnetization can be provided as either:
 # - the name of a file in feeLLGood’s format (‘.sol’ file)
 # - an array of three expression depending on the Cartesian spatial
