spinTransferTorque.h renamed spinAccumulationSolver to reflect what it really is

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ endif()
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET(HEADERS config.h node.h expression_parser.h mesh.h electrostatSolver.h
-    spinTransferTorque.h time_integration.h feellgoodSettings.h tetra.h
+    spinAccumulationSolver.h time_integration.h feellgoodSettings.h tetra.h
     facette.h linear_algebra.h log-stats.h tags.h chronometer.h element.h)
 
 SET(SOURCES feellgoodSettings.cpp time_integration.cpp solver.cpp electrostatSolver.cpp
