--- a/default-settings.yml
+++ b/default-settings.yml
@@ -166,6 +166,9 @@ mesh:
       # Boundary condition for spin accumulation diffusion problem.
       Qs: [0, 0, 0]
 
+      # polarization vector for spin accumulation
+      Pu: [0, 0, 0]
+
 # The initial magnetization can be provided as either:
 # - the name of a file in feeLLGood’s format (‘.sol’ file)
 # - an array of three expression depending on the Cartesian spatial
