Output the spin angle to the evol file
In outputs.evol_columns, let the keyword “max_angle” provide the maximum
angle between the magnetizations of adjacent nodes. This can be used to
asses whether the spatial discretization is fine enough.

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -51,6 +51,7 @@ outputs:
   # - iter: iteration number
   # - dt: time step
   # - max_dm: maximum variation of the magnetization
+  # - max_angle: maximum magnetization angle between adjacent nodes
   # - <dMx/dt>: average change rate of Mx
   # - <dMy/dt>: average change rate of My
   # - <dMz/dt>: average change rate of Mz
