unit-tests/CMakeLists: add missing libs
The libraries required by test_ut_{tet_lumping,tet_charges,energy} were
only listed if (MKL_FOUND), which made the build fail on systems missing
MKL. Let's add the missing target_link_libraries().

Fixes: https://github.com/feellgood/FeeLLGood/actions/runs/15256608479/job/42905642590

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -90,6 +90,27 @@ target_link_libraries(test_ut_anisotropy
     TBB::tbb
     )
 
+target_link_libraries(test_ut_tet_lumping
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+    TBB::tbb
+    )
+
+target_link_libraries(test_ut_tet_charges
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+    TBB::tbb
+    )
+
+target_link_libraries(test_ut_energy
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+    TBB::tbb
+    )
+
 if (MKL_FOUND)
     #target_compile_options(test_ut_solver PUBLIC -fsanitize=leak )
     #target_link_options(test_ut_solver PUBLIC -fsanitize=leak )
@@ -103,29 +124,11 @@ if (MKL_FOUND)
     #target_link_options(test_ut_tetra PUBLIC -fsanitize=leak )
     target_link_libraries(test_ut_tetra PkgConfig::MKL)
 
-    target_link_libraries(test_ut_tet_lumping
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-        TBB::tbb
-        PkgConfig::MKL
-        )
+    target_link_libraries(test_ut_tet_lumping PkgConfig::MKL)
 
-    target_link_libraries(test_ut_tet_charges
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-        TBB::tbb
-        PkgConfig::MKL
-        )
+    target_link_libraries(test_ut_tet_charges PkgConfig::MKL)
 
-    target_link_libraries(test_ut_energy
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-        TBB::tbb
-        PkgConfig::MKL
-        )
+    target_link_libraries(test_ut_energy PkgConfig::MKL)
 
     target_link_libraries(test_ut_anisotropy PkgConfig::MKL)
 endif()
