tools: rename tools, adding the "fg-" prefix
All these tools are meant to be installed in /usr/local/bin, thus
sharing the namespace with all other binaries on the target computer.

Reduce the risk of name collision by prefixing all the names with “fg-”,
save for fg-merge-sol and fg-plot, which already have the prefix. Also,
replace “covert2” by “sol2”, in order to highlight the source format.

WARNING: When upgrading an existing installation, it is recommended to
remove from /usr/local/bin (or whatever installation path was used)
these existing scripts:

 * convert2vtk
 * convert2hdf5
 * h5extract

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,9 +174,9 @@ endif()
 #===========================================================================
 
 install(TARGETS feellgood RUNTIME DESTINATION bin)
-install(PROGRAMS ./tools/convert2vtk DESTINATION bin)
-install(PROGRAMS ./tools/convert2hdf5 DESTINATION bin)
-install(PROGRAMS ./tools/h5extract DESTINATION bin)
+install(PROGRAMS ./tools/fg-sol2vtk DESTINATION bin)
+install(PROGRAMS ./tools/fg-sol2hdf5 DESTINATION bin)
+install(PROGRAMS ./tools/fg-h5extract DESTINATION bin)
 install(PROGRAMS ./tools/fg-merge-sol DESTINATION bin)
 
 #===========================================================================
