CMakeLists: install all tools
Also, sort them lexicographically.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,10 +174,13 @@ endif()
 #===========================================================================
 
 install(TARGETS feellgood RUNTIME DESTINATION bin)
-install(PROGRAMS ./tools/fg-sol2vtk DESTINATION bin)
-install(PROGRAMS ./tools/fg-sol2hdf5 DESTINATION bin)
+install(PROGRAMS ./tools/fg-configurator DESTINATION bin)
 install(PROGRAMS ./tools/fg-h5extract DESTINATION bin)
 install(PROGRAMS ./tools/fg-merge-sol DESTINATION bin)
+install(PROGRAMS ./tools/fg-mesh-stat DESTINATION bin)
+install(PROGRAMS ./tools/fg-plot DESTINATION bin)
+install(PROGRAMS ./tools/fg-sol2hdf5 DESTINATION bin)
+install(PROGRAMS ./tools/fg-sol2vtk DESTINATION bin)
 
 #===========================================================================
 # unit tests, by default it is not built.
