default-settings: wrap comment to 72 columns
Te rest of the file is consistently wrapped at 72 columns.

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -74,8 +74,9 @@ outputs:
   # or the keyword ‘false’ which disables the feature.
   mag_config_every: 100
 
-  # Arbitrary set of metadata items, in the form of "key: value" pairs, that will be added to the
-  # header of every output file. Typical keys are "Author", "Affiliation", "Licence".
+  # Arbitrary set of metadata items, in the form of "key: value" pairs,
+  # that will be added to the header of every output file. Typical keys
+  # are "Author", "Affiliation", "Licence".
   metadata:
 
 # Description of the meshed object.
