removed default value for spin accumulation Q in default-settings.yml to know if Q is undefined on purpose for the definition of the boundary conditions, removed unused structures for boundary conditions, added a member function to mesh class to sort out the various boundary conditions from all the facettes

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -167,8 +167,8 @@ mesh:
       # electrostatic problem.
       V:
 
-      # polarization vector for spin accumulation
-      Pu: [0, 0, 0]
+      # polarization vector for spin accumulation diffusion problem, example value [0,0,1]
+      Pu:
 
 # The initial magnetization can be provided as either:
 # - the name of a file in feeLLGood’s format (‘.sol’ file)
