spin diffusion boundary conditions re-implemented, user has to provide on a single surface current density and polarization vector, in accordance with the electrostatic boundary conditions and another surface where to force spin density to zero

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -170,6 +170,9 @@ mesh:
       # polarization vector for spin diffusion problem boundary condition
       P: [0, 0, 1]
 
+      # spin diffusion vector boundary condition, user should fix s to [0,0,0] on a single surface
+      s:
+
 # The initial magnetization can be provided as either:
 # - the name of a file in feeLLGood’s format (‘.sol’ file)
 # - an array of three expression depending on the Cartesian spatial
